# coral-calcium

./: CMakeLists.txt  LICENSE.md  README.md
modules/ca/: ChangedConnection.csl  ChangedRefField.csl  ChangedRefVecField.csl  ChangedValueField.csl  CycleException.csl  DBException.csl  DBSpaceFile.csl  DBSpaceStore.csl  EntityBean.csl  FieldChange.csl  FieldValueBean.csl  FormatException.csl  GraphChanges.csl  IArchive.csl  IChangeTracker.csl  IDBConnection.csl  IFieldChange.csl  IGraph.csl  IGraphChanges.csl  IGraphObserver.csl  ILuaManager.csl  IModel.csl  INamed.csl  IOException.csl  IObjectChanges.csl  IObjectModel.csl  IObjectObserver.csl  IObjectSpace.csl  IObjectUniverse.csl  IReceptacleChange.csl  IResultSet.csl  IServiceChanges.csl  IServiceObserver.csl  ISpace.csl  ISpaceChanges.csl  ISpaceFile.csl  ISpaceLoader.csl  ISpaceObserver.csl  ISpacePersister.csl  ISpaceSaver.csl  (+42 more)
src/: AnyArrayUtil.h  CMakeLists.txt  DBException.h  DBSpaceFile.cpp  DBSpaceStore.cpp  DBSpaceStoreQueries.h  FieldChange.cpp  GraphChanges.cpp  GraphChanges.h  IDBConnection.h  IResultSet.h  InvalidSpaceFileException.h  LuaManager.cpp  MalformedSerializedStringException.h  Model.cpp  Model.h  ModulePart.cpp  ObjectChanges.cpp  ObjectChanges.h  ObjectModel.cpp  ObjectSpace.cpp  ObjectUniverse.cpp  PersistentSpace.cpp  ReceptacleChange.cpp  SQLiteConnection.cpp  SQLiteConnection.h  SQLiteDBConnection.cpp  SQLiteDBConnection.h  SQLiteResultSet.cpp  SQLiteResultSet.h  SQLiteSpaceStore.cpp  ServiceChanges.cpp  ServiceChanges.h  Space.cpp  SpaceChanges.cpp  SpaceChanges.h  SpacePersister.cpp  SpacePersisterCache.h  SpaceSaverSQLQueries.h  SpaceSaverSQLite3.cpp  (+5 more)
src/persistence/: AnyArrayUtil.h  SpacePersister.cpp  SpacePersisterCache.h  SpaceUpdater.cpp  SpaceUpdater.h  StringSerializer.cpp  StringSerializer.h
src/persistence/sqlite/: SQLite.cpp  SQLite.h  SQLiteConnection.cpp  SQLiteConnection.h  SQLiteException.h  SQLiteResultSet.cpp  SQLiteResultSet.h  SQLiteSpaceStore.cpp
src/sqlite/: AnyArrayUtil.h  DBException.h  SQLiteConnection.cpp  SQLiteConnection.h  SQLiteResultSet.cpp  SQLiteResultSet.h  SQLiteSpaceStore.cpp  StringSerializer.cpp
tests/: CMakeLists.txt
tests/dom1/: CMakeLists.txt  Company.cpp  CompanySpace.cpp  CompanySpace.h  Developer.cpp  EvolutionVersion1Tests.cpp  Main.cpp  Manager.cpp  Project.cpp
tests/dom1/dom/: CaModel_dom.lua  Company.csl  Developer.csl  ICompany.csl  IDeveloper.csl  IManager.csl  IProject.csl  Manager.csl  Project.csl
tests/dom2/: CMakeLists.txt  Company.cpp  Employee.cpp  EvolutionVersion2Tests.cpp  Main.cpp  Product.cpp  Service.cpp
tests/dom2/dom/: CaModel_dom.lua  CaModel_domInv.lua  CaModel_notfound.lua  CaModel_scriptNoUpdate.lua  CaModel_syntaxerror.lua  ICompany.csl  IEmployee.csl  IProduct.csl  IService.csl  companyInv_v1_v2_update.lua  company_v1_v2_update.lua  noUpdateFunction.lua  updateLuaSyntaxError.lua
tests/lua/: CMakeLists.txt  ObserverTests.lua  SampleERM.lua
tests/modules/camodels/: CaModel_erm.lua  CaModel_extraModule.lua  CaModel_invalid1.lua  CaModel_invalid10.lua  CaModel_invalid11.lua  CaModel_invalid12.lua  CaModel_invalid13.lua  CaModel_invalid14.lua  CaModel_invalid15.lua  CaModel_invalid2.lua  CaModel_invalid3.lua  CaModel_invalid4.lua  CaModel_invalid5.lua  CaModel_invalid6.lua  CaModel_invalid7.lua  CaModel_invalid8.lua  CaModel_invalid9.lua  CaModel_shared.lua  CaModel_valid1.lua  CaModel_valid2.lua  CaModel_valid3.lua  CaModel_valid4.lua  CaModel_valid5.lua  SomeComponent.csl  SomeEnum.csl  SomeInterface.csl  SomeStruct.csl
tests/modules/erm/: CaModel_erm.lua  CaModel_ermNew.lua  CaModel_ermRO.lua  CaModel_ermScrambled.lua  CaModel_extraModule.lua  CaModel_faulty.lua  CaModel_shared.lua  IEntity.csl  IModel.csl  IRelationship.csl  Model.csl  Multiplicity.csl  Relationship.csl
tests/modules/graph/: CaModel_graph.lua  IDestructionObserver.csl  INode.csl  Node.csl
tests/modules/invalidModule/: SomeStruct.csl
tests/modules/serialization/: ArrayStruct.csl  BasicTypesStruct.csl  CaModel_serialization.lua  NativeClassCoral.csl  NestedStruct.csl  SimpleEnum.csl  TwoLevelNestedStruct.csl
tests/src/: CMakeLists.txt
tests/src/camodels/: CMakeLists.txt  SomeComponent.cpp
tests/src/erm/: CMakeLists.txt  Entity.cpp  Model.cpp  Relationship.cpp
tests/src/graph/: CMakeLists.txt  Node.cpp
tests/src/serialization/: CMakeLists.txt  NativeClass.h  NativeClassCoral.cpp
tests/src/tests/: BasicTests.cpp  CMakeLists.txt  DBConnectionTest.cpp  ERMSpace.cpp  ERMSpace.h  LuaArchiveTests.cpp  Main.cpp  ModelTests.cpp  NotificationTests.cpp  ObjectModelTests.cpp  PersistentSpaceTest.cpp  SpaceNotificationTests.cpp  SpacePersisterTest.cpp  SpaceSaverTest.cpp  SpaceTests.cpp  StringSerializationTests.cpp  TestUtils.h  UndoRedoTests.cpp  UniverseTests.cpp
tests/src/tests/persistence/: DBConnectionTests.cpp  LuaArchiveTests.cpp  SQLiteConnectionTests.cpp  SQLiteSpaceStoreTests.cpp  SpacePersisterTests.cpp  SpaceUpdaterTests.cpp  StringSerializationTests.cpp
